--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ nav a {
   text-decoration: none;
   padding: 20px;
   display: inline-block;
-  color: white;
+  color: green;
   transition: all 0.2s;
   text-transform: uppercase;
 }
